center email container on mobile bug

--- a/app/assets/stylesheets/homepage/_intro.scss
+++ b/app/assets/stylesheets/homepage/_intro.scss
@@ -16,7 +16,7 @@ section.intro {
     padding-bottom: 110px;
   }
 
-  .container {
+  .row {
     justify-content: center;
   }
 
